# aruco_detection_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  aruco.cpp  aruco_executable  cam_fps.py  cam_fps_date_time.py  charuco_video_process.py  cmake_install.cmake  fpsCal.cpp  fps_.py  framerate.py  marker  my_camera_calibration  pose_estimation_ammar.py  readme.md  testing_code.py  webcam_fps.py
py_scripts/: detect_markers_my.cpp  fps_.py  vid_rec.py
src/: aruco.cpp
